--- a/app/src/main/res/layout/property_list.xml
+++ b/app/src/main/res/layout/property_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.PropertyListActivity"
+    tools:context=".ui.property.PropertyListActivity"
     tools:listitem="@layout/property_list_content" />
