--- a/app/src/main/res/layout/property_list.xml
+++ b/app/src/main/res/layout/property_list.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/property_list"
-    android:name="com.openclassrooms.realestatemanager.ui.PropertyListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.property.PropertyListActivity"
-    tools:listitem="@layout/property_list_content" />
+    android:baselineAligned="false"
+    android:divider="?android:attr/dividerHorizontal"
+    android:orientation="horizontal"
+    android:showDividers="middle"
+    tools:context=".ui.property.PropertyListActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/property_list"
+        android:name="com.openclassrooms.realestatemanager.ui.PropertyListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".ui.property.PropertyListActivity"
+        tools:listitem="@layout/property_list_content" />
+</LinearLayout>
