- update AuthActivity.kt -> update firebase code in order to not use deprecated method onActivityResult - add on result method as well. - change name of PropertyListActivity.kt into MainActivity.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -42,7 +42,7 @@
         android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
         android:padding="12dp"
         android:text="@string/fui_sign_in_with_google"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="12sp"
         app:backgroundTint="@color/fui_bgGoogle"
         app:icon="@drawable/fui_ic_googleg_color_24dp"
@@ -60,6 +60,7 @@
         android:layout_marginEnd="@dimen/fui_wrapper_padding_horiz"
         android:layout_marginBottom="20dp"
         android:background="@color/fui_bgEmail"
+        app:icon="@drawable/ic_baseline_email_24"
         android:drawableStart="@android:drawable/ic_dialog_email"
         android:lineSpacingExtra="8sp"
         android:padding="12dp"
