--- a/app/src/main/res/layout/activity_property_detail.xml
+++ b/app/src/main/res/layout/activity_property_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.property.PropertyDetailActivity"
+    tools:context=".presentation.ui.property.PropertyDetailActivity"
     tools:ignore="MergeRootFrame">
 
     <com.google.android.material.appbar.AppBarLayout
