--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.property.AddPropertyFragment">
+    tools:context=".presentation.ui.property.AddPropertyFragment">
 
     <TextView
         android:layout_width="match_parent"
