--- a/app/src/main/res/layout/activity_property_list.xml
+++ b/app/src/main/res/layout/activity_property_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".presentation.ui.property.MainActivity">
+    tools:context=".presentation.ui.property_list.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
