- Remove bottom navigation view and replaced it by bottom app bar
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,4 +8,9 @@
         android:id="@+id/navigation_property_map"
         android:icon="@drawable/ic_baseline_map_24"
         android:title="@string/map" />
+
+    <item
+        android:id="@+id/navigation_property_map"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="@string/map" />
 </menu>
