--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,24 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/navigation_property_list">
+    app:startDestination="@id/propertyListFragment">
+
     <fragment
-        android:id="@+id/navigation_property_list"
+        android:id="@+id/propertyListFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property_list.PropertyListFragment"
-        android:label="@string/title_property_list"
-        tools:layout="@layout/fragment_property_list">
+        android:label="PropertyListFragment">
         <action
-            android:id="@+id/action_navigation_property_list_to_propertyDetailFragment"
-            app:destination="@id/navigation_property_detail" />
+            android:id="@+id/action_propertyListFragment_to_propertyDetailFragment"
+            app:destination="@id/propertyDetailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/navigation_property_map"
-        android:name="com.openclassrooms.realestatemanager.presentation.ui.property_map.MapFragment"
-        android:label="@string/title_properties_map"
-        tools:layout="@layout/fragment_map" />
-    <fragment
-        android:id="@+id/navigation_property_detail"
+        android:id="@+id/propertyDetailFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property.PropertyDetailFragment"
         android:label="property_detail"
         tools:layout="@layout/property_detail" />
+    <fragment
+        android:id="@+id/addPropertyFragment"
+        android:name="com.openclassrooms.realestatemanager.presentation.ui.property.AddPropertyFragment"
+        android:label="add_property_fragment"
+        tools:layout="@layout/add_property_fragment" />
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.openclassrooms.realestatemanager.presentation.ui.property_map.MapFragment"
+        android:label="fragment_map"
+        tools:layout="@layout/fragment_map" />
 </navigation>
