--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,12 +12,21 @@
         <action
             android:id="@+id/action_propertyListFragment_to_propertyDetailFragment"
             app:destination="@id/propertyDetailFragment" />
+        <argument
+            android:name="property"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/propertyDetailFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property.PropertyDetailFragment"
         android:label="property_detail"
-        tools:layout="@layout/property_detail" />
+        tools:layout="@layout/property_detail">
+        <argument
+            android:name="property"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/addPropertyFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property.AddPropertyFragment"
