--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,9 @@
             android:name="property"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_propertyListFragment_to_addPropertyFragment"
+            app:destination="@id/addPropertyFragment" />
     </fragment>
     <fragment
         android:id="@+id/propertyDetailFragment"
@@ -37,4 +40,9 @@
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property_map.MapFragment"
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.openclassrooms.realestatemanager.presentation.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
