--- a/app/src/main/res/layout-sw600dp/add_property_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/add_property_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="propertyType"
-            type="com.openclassrooms.realestatemanager.domain.model.Property.PropertyType" />
+            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
