- add Parcelize to Photo, Video & media models
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="marginStart">14dp</dimen>
     <dimen name="marginEnd">16dp</dimen>
     <dimen name="textSize">16sp</dimen>
+    <dimen name="formWidth">260dp</dimen>
+
 </resources>
