--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -91,7 +91,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/type_input_layout"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -113,7 +113,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/address_text_input"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -126,7 +126,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/address2_text_input"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -139,7 +139,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/city_text_input"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -165,7 +165,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/country_text_input"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -179,8 +179,8 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/description_text_input"
-                    android:layout_width="280dp"
-                    android:layout_height="300dp"
+                    android:layout_width="@dimen/formWidth"
+                    android:layout_height="200dp"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/description"
@@ -206,7 +206,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/price_text_input"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/formWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
@@ -255,6 +255,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/surface_text_input"
                     app:layout_constraintTop_toBottomOf="@id/price_text_input" />
+
+                <androidx.constraintlayout.helper.widget.Flow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="155dp"
+                    tools:layout_editor_absoluteY="615dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
